--- a/digital_instruments_frontend/package.json
+++ b/digital_instruments_frontend/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@nextui-org/react": "^2.2.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "chart.js": "^3.6.0",
-    "chartjs-plugin-dragdata": "^2.2.5",
+    "@nextui-org/react": "^2.6.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-dragdata": "^2.3.1",
+    "craco": "^0.0.3",
     "digital_instruments": "file:../digital_instruments_api/pkg",
-    "framer-motion": "^10.16.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "framer-motion": "^12.16.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-iconly": "^2.2.10",
     "react-scripts": "^5.0.1",
     "wasm-loader": "^1.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^5.0.2"
   },
   "scripts": {
     "start": "craco start",
@@ -43,7 +44,8 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^4.1.8"
   },
-  "cracoConfig": "config/craco.config.js"
+  "cracoConfig": "config/craco.config.js",
+  "homepage": "/Digital-Instruments"
 }
