--- a/digital_instruments_frontend/package.json
+++ b/digital_instruments_frontend/package.json
@@ -47,5 +47,5 @@
     "tailwindcss": "^4.1.8"
   },
   "cracoConfig": "config/craco.config.js",
-  "homepage": "/Digital-Instruments"
+  "homepage": "."
 }
